--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,14 @@
   "version": "1.0.0",
   "description": "Backend Express + MySQL para Ecommerce-Lab (ES). Expone API de productos y órdenes.",
   "main": "server.js",
+  "bin": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build": "pkg . --out-path dist --targets node18-win-x64,node18-linux-x64,node18-macos-x64 --options no-warnings && node build-helper.js",
+    "build:win": "pkg . --out-path dist --targets node18-win-x64 --options no-warnings && node build-helper.js",
+    "build:linux": "pkg . --out-path dist --targets node18-linux-x64 --options no-warnings && node build-helper.js",
+    "build:mac": "pkg . --out-path dist --targets node18-macos-x64 --options no-warnings && node build-helper.js"
   },
   "keywords": [
     "express",
@@ -25,7 +30,19 @@
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "pkg": "^5.8.1"
+  },
+  "pkg": {
+    "scripts": [
+      "server.js",
+      "db.js",
+      "middleware/**/*.js",
+      "routes/**/*.js"
+    ],
+    "assets": [
+      "../public/**/*"
+    ]
   }
 }
 
